After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710172 - ges-formatter.h: 'class' usage as function argument name breaks build with c++ compilers
ges-formatter.h: 'class' usage as function argument name breaks build with c+...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
1.1.90
Other Windows
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-15 08:56 UTC by Kishore Arepalli
Modified: 2013-10-15 09:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix for syntax errors (2.25 KB, patch)
2013-10-15 09:00 UTC, Kishore Arepalli
committed Details | Review

Description Kishore Arepalli 2013-10-15 08:56:23 UTC
ges\ges-formatter.h(138): error C2332: 'class' : missing tag name
ges\ges-formatter.h(138): error C2011: '<unnamed-tag>' : 'enum' type redefinition

ges\ges-formatter.h(138): error C2144: syntax error : '<unnamed-tag>' should be preceded by ')'
ges\ges-formatter.h(138): error C2144: syntax error : '<unnamed-tag>' should be preceded by ';'
ges\ges-formatter.h(138): error C2143: syntax error : missing ';' before ','
ges\ges-formatter.h(138): error C2059: syntax error : ','
ges\ges-formatter.h(144): error C2059: syntax error : ')'


The above sytax error problem is for the below method declaration.

void ges_formatter_class_register_metas (GESFormatterClass * class,
                                         const gchar *name,
                                         const gchar *description,
                                         const gchar *extension,
                                         const gchar *mimetype,
                                         gdouble version,
                                         GstRank rank);
Comment 1 Kishore Arepalli 2013-10-15 09:00:11 UTC
Created attachment 257332 [details] [review]
Fix for syntax errors

modified the "class" parameter for 3 methods in 3 header files
Comment 2 Tim-Philipp Müller 2013-10-15 09:53:24 UTC
Pushed, thanks:


commit 71a6d75d757132028d13a6ed3d8dbfe77ed6b635
Author: Kishore Arepalli <kishore.arepalli@gmail.com>
Date:   Tue Oct 15 10:57:31 2013 +0200

    ges-formatter: don't use 'class' as function argument name in headers
    
    It's a keyword in C++ and C++ compilers won't like it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710172
Comment 3 Tim-Philipp Müller 2013-10-15 09:54:50 UTC
Comment on attachment 257332 [details] [review]
Fix for syntax errors

Pushed with minor modifications (use 'klass' instead of '_class', which is the common idiom).