ges-formatter: don't use 'class' as function argument name in headers

It's a keyword in C++ and C++ compilers won't like it.

https://bugzilla.gnome.org/show_bug.cgi?id=710172